--- a/template/app.html
+++ b/template/app.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/static/main.js"></script>
+    <!-- <script type="text/javascript" src="/static/main.js?"></script> -->
+    <script type="text/javascript">
+      document.write('<scr'+'ipt src="/static/main.js?'+Math.random()+'" type="text/javascript"></scr'+'ipt>');
+    </script>
   </body>
 </html>
